--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -105,6 +105,9 @@
     <Compile Include="Assets\GreenForest\PostProcessing\Runtime\Utils\MaterialFactory.cs" />
     <Compile Include="Assets\GreenForest\PostProcessing\Runtime\Utils\RenderTextureFactory.cs" />
     <Compile Include="Assets\GreenForest\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
+    <Compile Include="Assets\JSLizards\Iguana\Scripts\IguanaCameraScript.cs" />
+    <Compile Include="Assets\JSLizards\Iguana\Scripts\IguanaCharacter.cs" />
+    <Compile Include="Assets\JSLizards\Iguana\Scripts\IguanaUserController.cs" />
     <Compile Include="Assets\living birds\demo\livingBirdsDemoScript.cs" />
     <Compile Include="Assets\living birds\scripts\lb_Bird.cs" />
     <Compile Include="Assets\living birds\scripts\lb_BirdController.cs" />
@@ -145,6 +148,7 @@
     <None Include="Assets\GreenForest\PostProcessing\Resources\Shaders\BuiltinDebugViews.shader" />
     <None Include="Assets\GreenForest\PostProcessing\Resources\Shaders\Common.cginc" />
     <None Include="Assets\GreenForest\PostProcessing\Resources\Bluenoise64\COPYING.txt" />
+    <None Include="Assets\JSLizards\Iguana\Readme.txt" />
     <None Include="Assets\GreenForest\PostProcessing\Editor Resources\UI\Trackball.shader" />
     <None Include="Assets\GreenForest\PostProcessing\Resources\Shaders\Bloom.cginc" />
     <None Include="Assets\GreenForest\PostProcessing\Resources\Shaders\TAA.shader" />
